Trying webkit fix for overflow on mobile

--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -1,6 +1,6 @@
 .appContainer {
   min-height: 100vh;
-  min-height: -webkit-fill-available;
+  height: 100%;
 
   display: flex;
   flex-direction: column;
